2-k3s/07.authentik-deployment/ingress/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-http
  namespace: app-authentik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.epaflix.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik-system
      services:
        - name: authentik-server
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-https
  namespace: app-authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.epaflix.com`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"
