2-k3s/07.authentik-deployment/ingress/outpost-ingressroute.yaml
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-outpost-https
  namespace: app-authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.epaflix.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: authentik-server
          port: 80
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"

---
